--- a/webApp/templates/static/nav.html
+++ b/webApp/templates/static/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">
 		<img src="{{ url_for('static', filename='img/favicon/favicon.ico') }}" alt="Logo" />
-		<a href="https://github.com/oasis-open/openc2-jadn/tree/master/jadn">JDAN</a>&nbsp;Lint
+		<a href="https://github.com/oasis-open/openc2-jadn/tree/master/jadn" target="_blank">JDAN</a>&nbsp;Lint
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -10,10 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#" data-toggle="modal" data-target="#aboutModal">About</a>
              </li>
              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#"  data-toggle="modal" data-target="#featuresModal">Features</a>
              </li>
              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Examples</a>
@@ -26,3 +26,38 @@
         </ul>
     </div>
 </nav>
+
+<div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="aboutModalLabel" aria-hidden="true">
+	<div class="modal-dialog h-100 d-flex flex-column justify-content-center my-0" role="document">
+    	<div class="modal-content">
+      		<div class="modal-header">
+        		<h5 class="modal-title" id="aboutModalLabel">About</h5>
+        		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          			<span aria-hidden="true">&times;</span>
+        		</button>
+      		</div>
+      		
+			<div class="modal-body">
+        		<p>OpenC2 is defined using JSON Abstract Schema Notation (JADN). The JADN validator can check messages against any schema.</p>
+				<p>Source is available from the <a href="https://github.com/OpenC2-org/jadn" target="_blank">OpenC2 JADN Github</a> repo.</p>
+      		</div>
+    	</div>
+  	</div>
+</div>
+
+<div class="modal fade" id="featuresModal" tabindex="-1" role="dialog" aria-labelledby="featuresModalLabel" aria-hidden="true">
+	<div class="modal-dialog h-100 d-flex flex-column justify-content-center my-0" role="document">
+    	<div class="modal-content">
+      		<div class="modal-header">
+        		<h5 class="modal-title" id="featuresModalLabel">Features</h5>
+        		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          			<span aria-hidden="true">&times;</span>
+        		</button>
+      		</div>
+      		
+			<div class="modal-body">
+        		<p>Features....</p>
+      		</div>
+    	</div>
+  	</div>
+</div>
