--- a/webApp/templates/index.html
+++ b/webApp/templates/index.html
@@ -10,8 +10,8 @@
                 <fieldset>
                     <legend>JADN Schema</legend>
 					<div class="form-row">
-						<div class="form-group col-md-4">
-							<select class="form-control" id="schema" name="schema">
+						<div class="form-group col-md-3 pr-1 pl-1">
+							<select id="schema-list" name="schema-list" class="form-control">
 								<option value="empty" selected="">Schema</option>
 								{% for opt in options.schemas %}
 									<option value="{{ opt }}">{{ opt }}</option>
@@ -22,35 +22,37 @@
 							</select>
 					   	</div>
 						
-						<div id="schema-file-group" class="form-group col-md-4 d-none">
+						<div id="schema-file-group" class="form-group col-md-3 d-none pr-1 pl-1">
 							<input type="file" class="form-control-file" id="schema-file" name="schema-file" accept=".jadn">
 					  	</div>
 					</div>
 
 					<div class="form-row">
 						<div class="form-group col-md-12">
-							<textarea class="form-control border" placeholder="Paste JADN schema here" id="schema-json" name="schema-json" rows="10" required=""></textarea>
+							<textarea class="form-control border" placeholder="Paste JADN schema here" id="schema" name="schema" rows="10" required=""></textarea>
 						</div>
 					</div>
 					
-					<div class="dropdown float-right">
-  						<button class="btn btn-info dropdown-toggle" type="button" id="schemaOptions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    						Schema Options
-					  	</button>
-					  	<div class="dropdown-menu" aria-labelledby="schemaOptions">
-                       		<a class="dropdown-item" href="#" onclick="formatJson('schema-json')">Format</a>
-                       		<a class="dropdown-item" href="#" onclick="formatJson('schema-json')">Verbose</a>
-							<a class="dropdown-item" href="#" onclick="minifyJson('schema-json')">Minify</a>
-							<a class="dropdown-item" href="#" onclick="verifySchema()">Verify</a>
-					  	</div>
+					<div class="form-row-fluid">
+						<div class="dropdown float-right">
+							<button class="btn btn-info dropdown-toggle" type="button" id="schema-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Schema Options
+							</button>
+							<div class="dropdown-menu" aria-labelledby="schema-options">
+								<a class="dropdown-item" href="#" onclick="format('schema')">Format</a>
+								<a class="dropdown-item" href="#" onclick="format('schema')">Verbose</a>
+								<a class="dropdown-item" href="#" onclick="minify('schema')">Minify</a>
+								<a class="dropdown-item" href="#" onclick="verifySchema()">Verify</a>
+							</div>
+						</div>
 					</div>
                 </fieldset>
 
                 <fieldset>
                     <legend>Message</legend>
 					<div class="form-row">
-						<div class="form-group col col-md-4">
-							<select class="form-control" id="message" name="message">
+						<div class="form-group col-md-3 pr-1 pl-1">
+							<select id="message-list" name="message-list" class="form-control">
 								<option value="empty" selected="">Message</option>
 								{% for opt in options.messages %}
 									<option value="{{ opt }}">{{ opt }}</option>
@@ -61,32 +63,44 @@
 							</select>
 						</div>
 						
-						<div id="message-file-group" class="form-group col-md-4 d-none">
-							<input type="file" class="form-control-file" id="message-file" name="message-file" accept=".json">
+						<div id="message-file-group" class="form-group col-md-3 d-none pr-1 pl-1">
+							<input type="file" class="form-control-file" id="message-file" name="message-file" accept=".json,.xml,.cbor">
 					  	</div>
-						
-						<div class="form-group col-md-4">
-							<select class="form-control" id="decode" name="decode" required="">
-								<option value="empty" selected="">Decode</option>
-							</select>
-						</div>
 					</div>
 					
 					<div class="form-row">
 						<div class="form-group col-md-12">
-							<textarea class="form-control border" placeholder="Paste message to be validated here" id="message-json" name="message-json" rows="5" required=""></textarea>
+							<textarea class="form-control border" placeholder="Paste message to be validated here" id="message" name="message" rows="10" required=""></textarea>
 						</div>
 					</div>
-
-					<div class="dropdown float-right">
-  						<button class="btn btn-info dropdown-toggle" type="button" id="messageOptions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    						Message Options
-					  	</button>
-					  	<div class="dropdown-menu" aria-labelledby="messageOptions">
-                       		<a class="dropdown-item" href="#" onclick="formatJson('message-json')">Format</a>
-                       		<a class="dropdown-item" href="#" onclick="formatJosn('message-json')">Verbose</a>
-							<a class="dropdown-item" href="#" onclick="minifyJson('message-json')">Minify</a>
-					  	</div>
+						
+					<div class="form-row-fluid">						
+						<div class="float-left form-group col-md-3 col-sm-6 pr-1 pl-1">
+							<select class="form-control" id="message-format" name="message-format" required="">
+								<option value="" selected="">Format</option>
+								<option value="json">json</option>
+								<option value="cbor">cbor</option>
+								<!--<option value="protobuf">protobuf</option>
+								<option value="xml">xml</option>-->
+							</select>
+						</div>
+						
+						<div class="float-left form-group col-md-3 col-sm-6 pr-1 pl-1">
+							<select class="form-control" id="message-decode" name="message-decode" required="">
+								<option value="empty" selected="">Decode</option>
+							</select>
+						</div>
+						
+						<div class="dropdown float-right">
+							<button class="btn btn-info dropdown-toggle" type="button" id="message-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Message Options
+							</button>
+							<div class="dropdown-menu" aria-labelledby="message-options">
+								<a class="dropdown-item" href="#" onclick="format('message')">Format</a>
+								<a class="dropdown-item" href="#" onclick="format('message')">Verbose</a>
+								<a class="dropdown-item" href="#" onclick="minify('message')">Minify</a>
+							</div>
+						</div>
 					</div>
                 </fieldset>
 
@@ -102,36 +116,47 @@
 {% block page_script %}
 <script type="text/javascript" src="{{ url_for('static', filename='js/utils.js') }}"></script>
 <script type="text/javascript">
-    $("#schema, #message").change(function(e) {
+    $("#schema-list, #message-list").change(function(e) {
         id = $(e.target).attr("id")
+		type = id.split('-')[0]
         selected = $(e.target).val()
 		
-		$("#"+id+"-file-group").addClass("d-none")
+		$("#"+type+"-file-group").addClass("d-none")
 		
         if (selected == "" || selected == null) {
             return
         } else if (selected == "empty") {
-            $("#"+id+"-json").text('').val('')
+            $(e).text("").val("")
             return
         } else if (selected == "file") {
-			console.log("File")
-			$("#"+id+"-file-group").removeClass("d-none")
+			$("#"+type+"-file-group").removeClass("d-none")
 			return
 		}
 
         $.get(
-            "/load/"+id+"s/"+selected,
+            "/load/"+type+"s/"+selected,
             function(data) {
-                try {
-                    $.parseJSON(data)
-                    j = JSON.stringify($.parseJSON(data), null, indext)
-                    $("#"+id+"-json").text(j).val(j)
-                } catch(e) {
-                    j = JSON.stringify(data, null, indext)
-                    $("#"+id+"-json").text(j).val(j)
-                }
-				if (id == "schema") {
-					loadDecodeTypes()
+				if (data['type'] == type+"s" && data['file'] == selected) {
+					
+					if (type == "message") {
+						t = data['file'].split('.')[1]
+						$("#message-format").val(t)
+						switch(t) {
+							case 'cbor':
+								$("#"+type).addClass('minify')
+								d = cbor2bytes(data['data'])
+								break
+							default:
+								d = data['data']
+						}
+						$("#"+type).text(d).val(d)
+						
+					} else if (type == "schema") {
+						$("#"+type).text(data['data']).val(data['data'])
+						loadDecodeTypes()
+					}
+				} else {
+					alertMsg("#alert-container", "Cannot load data")
 				}
             }
         ).fail(function() {
@@ -140,45 +165,46 @@
     })
 	
 	$("#schema-file, #message-file").change(function(e) {
-		src = $(e.target).attr("id").split('-')[0]
+		id = $(e.target).attr("id").split('-')[0]
 		var fileReader = new FileReader()
 		
-    	fileReader.onload = function () {
+    	fileReader.onload = function (e) {
+			data = fileReader.result
 			try {
-				data = $.parseJSON(fileReader.result)
-				j = JSON.stringify(data, null, indext)
-				$("#"+id+"-json").text(j).val(j)
+				j = JSON.stringify($.parseJSON(data), null, indent)
             } catch(e) {
-				j = JSON.stringify(fileReader.result, null, indext)
-				$("#"+id+"-json").text(j).val(j)
+				data = atob(data.substr(data.indexOf(',')+1))
+				$("#"+type).addClass('minify')
+				j = cbor2bytes(data)
             }
+			$("#"+id).text(j).val(j)
 			
 			if (id == "schema") {
 				loadDecodeTypes()
 			}
     	}
 		
-    	fileReader.readAsText($(e.target).prop('files')[0])
+    	fileReader.readAsDataURL($(e.target).prop('files')[0])
 	})
 
     $("button[type='reset']").click(function(e) {
         $("textarea").each(function(i, e) {
-            $(e).val("")
-            $(e).text("")
+            $(e).text("").val("").removeClass('minify format')
         });
     })
 	
-	$("#schema-json").on('input change paste', loadDecodeTypes)
+	$("#schema").on('input change paste', loadDecodeTypes)
 	
-	function loadDecodeTypes() {		
+	function loadDecodeTypes() {
+		data = $("#schema").val() || $("#schema").text()
 		try {
-			schema_records = $.map($.parseJSON($("#schema-json").val())['types'], function(v, k) {
+			schema_records = $.map($.parseJSON(data)['types'], function(v, k) {
 				return [[v[1], v[0]]]
 			})
 		} catch (e) {
 			schema_records = $.parseJSON("{}")
 			opt = $("<option/>").addClass("schema_record").attr("disabled", "").text("Cannot Load, Invalid Schema")
-			$("#decode").append(opt)
+			$("#message-decode").append(opt)
 		}
 		
 		schema_records.sort(function(a, b){
@@ -194,26 +220,39 @@
   			return 0;
 		});
 		
-		$("#decode option.schema_record").remove()
+		$("#message-decode option.schema_record").remove()
 		$.each(schema_records, function(i, v) {
 			opt = $("<option/>").addClass("schema_record").attr("value", [v[1]]).text(v[0] + " - " + v[1])
-			$("#decode").append(opt)
+			$("#message-decode").append(opt)
 		})
 	}
 
     function validateForm() {
+		schema = $("#schema").val() || $("#schema").text()
         try {
-            $.parseJSON($("#schema-json").val())
+            $.parseJSON(schema)
         } catch(e) {
 			alertMsg("#alert-container", "Schema Invalid")			
 			return false
         }
-
-        try {
-            $.parseJSON($("#message-json").val())
-        } catch(e) {
-			alertMsg("#alert-container", "Message Invalid")
-        }
+		
+		message = $("#message").val() || $("#message").text()
+		message_type = $("#message-format").val()
+		console.log(message_type)
+		switch (message_type) {
+			case 'cbor':
+				minify('message')
+				break
+			case 'json':
+				try {
+					$.parseJSON(message)
+				} catch(e) {
+					alertMsg("#alert-container", "Message Invalid")
+				}
+				break
+			default:
+				break
+		}
 		
 		decode = $("#decode option:selected").val()
 		if ($.inArray(decode, [null, "", "empty"]) >= 0) {
@@ -225,12 +264,12 @@
     }
 	
 	function verifySchema(id) {
-		data = $("#schema-json").val()
+		data = $("#schema").val() || $("#schema").text()
 		
 		 $.post(
             "/validate/schema",
 			{
-				"schema-json": data
+				"schema": data
 			},
             function(d) {
 				if (d['valid_bool']) {
