--- a/webApp/static/css/styles.css
+++ b/webApp/static/css/styles.css
@@ -1,6 +1,9 @@
 /*
 Custom CSS Styles
 */
+body {
+	padding-top: 60px;
+}
 .navbar-brand > img {
   max-height: 2em;
   width: auto;
@@ -27,4 +30,24 @@ div.scroll {
 div.scroll-large {
     max-height: 40em;
     overflow: scroll;
+}
+
+// Extra small devices (portrait phones, less than 576px)
+// No media query since this is the default in Bootstrap
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+	
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
 }
