--- a/webApp/templates/static/nav.html
+++ b/webApp/templates/static/nav.html
@@ -1,14 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="navbar-brand">
 		<img src="{{ url_for('static', filename='img/favicon/favicon.ico') }}" alt="Logo" />
-		<a href="https://github.com/oasis-open/openc2-jadn/tree/master/jadn" target="_blank">JDAN</a>&nbsp;Lint
-    </a>
+		<a href="https://github.com/oasis-open/openc2-jadn/" target="_blank">JDAN</a>&nbsp;Lint
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
+			<li class="nav-item">
+                <a class="nav-link" href="/" >Home</a>
+             </li>
+			<li class="nav-item">
+                <a class="nav-link" href="/validate" >Validate</a>
+             </li>
+			<li class="nav-item">
+                <a class="nav-link" href="/convert" >Convert</a>
+             </li>
              <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#aboutModal">About</a>
              </li>
@@ -27,37 +36,4 @@
     </div>
 </nav>
 
-<div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="aboutModalLabel" aria-hidden="true">
-	<div class="modal-dialog h-100 d-flex flex-column justify-content-center my-0" role="document">
-    	<div class="modal-content">
-      		<div class="modal-header">
-        		<h5 class="modal-title" id="aboutModalLabel">About</h5>
-        		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          			<span aria-hidden="true">&times;</span>
-        		</button>
-      		</div>
-      		
-			<div class="modal-body">
-        		<p>OpenC2 is defined using JSON Abstract Schema Notation (JADN). The JADN validator can check messages against any schema.</p>
-				<p>Source is available from the <a href="https://github.com/OpenC2-org/jadn" target="_blank">OpenC2 JADN Github</a> repo.</p>
-      		</div>
-    	</div>
-  	</div>
-</div>
-
-<div class="modal fade" id="featuresModal" tabindex="-1" role="dialog" aria-labelledby="featuresModalLabel" aria-hidden="true">
-	<div class="modal-dialog h-100 d-flex flex-column justify-content-center my-0" role="document">
-    	<div class="modal-content">
-      		<div class="modal-header">
-        		<h5 class="modal-title" id="featuresModalLabel">Features</h5>
-        		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          			<span aria-hidden="true">&times;</span>
-        		</button>
-      		</div>
-      		
-			<div class="modal-body">
-        		<p>Features....</p>
-      		</div>
-    	</div>
-  	</div>
-</div>
+{% include "static/modals.html" %}
