updated for openc2 package

--- a/webApp/templates/convert/index.html
+++ b/webApp/templates/convert/index.html
@@ -55,7 +55,7 @@
 					</fieldset>
 
 					<fieldset class="col-6 p-0 float-left">
-						<legend>Converted</legend>
+						<legend>Converted Schema</legend>
 						
 						<textarea class="form-control border" placeholder="Converted JADN schema" id="convert" name="convert" rows="25">{{ options.schema.convert }}</textarea>
 						
