--- a/webApp/templates/static/nav.html
+++ b/webApp/templates/static/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="navbar-brand">
 		<img src="{{ url_for('static', filename='img/favicon/favicon.ico') }}" alt="Logo" />
-		<a href="https://github.com/oasis-open/openc2-jadn/" target="_blank">JDAN</a>&nbsp;Lint
+		<a href="https://github.com/oasis-open/openc2-jadn/" target="_blank">JADN</a>&nbsp;Lint
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,9 +9,6 @@
 
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-                <a class="nav-link" href="/" >Home</a>
-             </li>
 			<li class="nav-item">
                 <a class="nav-link" href="/validate" >Validate</a>
              </li>
