UI updates for json version of non json messages

--- a/webApp/templates/static/modals/features.html
+++ b/webApp/templates/static/modals/features.html
@@ -9,7 +9,25 @@
       		</div>
       		
 			<div class="modal-body">
-        		<p>Features....</p>
+				<ul>
+					<li>JADN validation of messages in
+						<ul>
+							<li>JSON Format</li>
+							<li>CBOR Format</li>
+							<li>XML Format</li>
+						</ul>
+					</li>
+				  	<li>JADN Schema conversion to
+						<ul>
+							<li>JADN Format</li>
+							<li>ProtoBuf3 Format</li>
+							<li>Relax-NG Format</li>
+							<li>CDDL Format</li>
+							<li>MarkDown Format</li>
+							<li>HTML Format</li>
+						</ul>
+					</li>
+				</ul>
       		</div>
     	</div>
   	</div>
