--- a/webApp/templates/static/nav.html
+++ b/webApp/templates/static/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="navbar-brand">
+	<div class="navbar-brand">
 		<img src="{{ url_for('static', filename='img/favicon/favicon.ico') }}" alt="Logo" />
 		<a href="https://github.com/oasis-open/openc2-jadn/" target="_blank">JADN</a>&nbsp;Lint
     </div>
@@ -11,9 +11,12 @@
         <ul class="navbar-nav mr-auto">
 			<li class="nav-item">
                 <a class="nav-link" href="/validate" >Validate</a>
-             </li>
+            </li>
 			<li class="nav-item">
                 <a class="nav-link" href="/convert" >Convert</a>
+             </li>
+			<li class="nav-item">
+                <a class="nav-link" href="/create" >Create</a>
              </li>
              <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#aboutModal">About</a>
